--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   flutter_ffmpeg: ^0.4.0
   file_picker: ^5.0.0 # For file selection
   path_provider: ^2.0.0 # For accessing device paths
+  flutter_tts: ^4.0.2
+  video_player: ^2.9.2
+  dio: ^5.7.0
+  permission_handler: ^11.3.1
+  intl: ^0.19.0
+  youtube_explode_dart: ^2.3.4
 
 dev_dependencies:
   flutter_test:
